# FuzzBuilder

./: .gitignore  Dockerfile  README.md
debug/: Dockerfile  new.dockerfile  old.dockerfile
eval_script/: coverage.py  coverage_api.py
exp/: eval.txt
exp/boringssl/: BIO.crypto.conf  BIO.ssl.conf  CBS.crypto.conf  SSL.ssl.conf  apis.txt  build.sh  build_new.sh  fuzzer_main.cc  seed.conf
exp/c-ares/: README.md  StandaloneFuzzTargetMain.c  apis.txt  ares_create_query.conf  ares_parse_reply.conf  build.sh  build_afl.sh  build_libfuzzer.sh  build_new.sh  seed.conf
exp/cJSON/: cJSON.conf  seed.conf
exp/expat/: XML_Parse.conf  apis.txt  bug.conf  build.sh  build_new.sh  fuzzer_main.cc  seed.conf
exp/mpc/: mpc_test_pass.conf  mpca_lang.conf  seed.conf
exp/yara/: apis.txt  build.sh  build_new.sh  fuzzer_main.cc  seed.conf  yr_compiler_add_string.conf  yr_rules_scan_mem.conf
script/: coverage.py  execute.py  seed_maker.py
src/: CMakeLists.txt  config.cc  execgen.cc  irfreader.cc  irireader.cc  irreader.cc  irwriter.cc  loader.cc  logger.cc  main.cc  modify.cc  seedgen.cc
src/inc/: config.h  execgen.h  irfreader.h  irireader.h  irreader.h  irwriter.h  loader.h  logger.h  modify.h  seedgen.h
